--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
