--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
-    "stripe": "^16.8.0"
+    "stripe": "^16.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
